--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -1,16 +1,17 @@
+<h1>
+  <%= link_to "Shorten a Url!", new_url_path %>
+</h1>
 <table>
-  <tr>
-    <th>Original URL</th>
-    <th>Shortened URL</th>
-  </tr>
-
-  <% @urls.each do  |url| %>
-  <tr>
-    <td> <a href = <%= url.long_url %> ><%= url.long_url %></
-      a></td>
-      <td> <a href = <%=url.short_url %> ><%= url.short_url %></a></td>
-    </td>
+<tr>
+<th>Original URL</th>
+<th>Shortened URL</th>
+</tr>
+<%  @urls.each do |url| %>
+    <tr>
+    <td> <a href = <%= url.long_url %> ><%= url.long_url %></a></td>
+    <td> <%= link_to url.short_url, short_url_path(url), id: url %></a> </td>
     <td> <%= link_to 'Show', url_path(url) %> </td>
-  </tr>
-    <% end %>
-  </table>
+    <td> <%= link_to 'Delete', url_path(url), method: :delete, data: { confirm: 'Are you sure?' }, class: "hi" %></td>
+    </tr>
+<% end %>
+</table>
